# c99lang

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh  use_guide.md
.codebuddy/memory/: 2026-03-23.md
examples/: c99_features.c  fibonacci.c  hello.c
include/codegen/: codegen_x86_64.h  regalloc.h
include/ir/: ir.h  ir_gen.h
include/lexer/: lexer.h  token.h
include/parser/: ast.h  parser.h
include/preprocessor/: macro.h  preprocessor.h
include/sema/: sema.h  symtab.h  type.h
include/util/: arena.h  error.h  strtab.h  vector.h
src/: main.c
src/codegen/: codegen_x86_64.c  regalloc.c
src/ir/: ir.c  ir_gen.c  ir_print.c
src/lexer/: lexer.c  token.c
src/parser/: ast.c  ast_print.c  parser.c  parser_decl.c  parser_expr.c  parser_stmt.c
src/preprocessor/: macro.c  preprocessor.c
src/sema/: scope.c  sema.c  symtab.c  type.c
src/util/: arena.c  error.c  strtab.c  vector.c
tests/: test_arena.c  test_ir.c  test_lexer.c  test_lexer_extended.c  test_parser.c  test_parser_extended.c  test_preprocessor.c  test_strtab.c  test_type_symtab.c  test_vector.c
